Closed Bug 1258137 Opened 8 years ago Closed 8 years ago

OSFileSystem should not be kept alive by more than 1 Directory

Categories

(Core :: DOM: Core & HTML, defect)

47 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: baku, Assigned: baku)

Details

Attachments

(1 file)

Attached patch ref2.patchSplinter Review
      No description provided.
Attachment #8732549 - Flags: review?(bugs)
Attachment #8732549 - Flags: review?(bugs) → review+
Backed out for Android test_basic.html failures.
https://hg.mozilla.org/integration/mozilla-inbound/rev/6d3b1698925e

https://treeherder.mozilla.org/logviewer.html#?job_id=24185444&repo=mozilla-inbound
TEST-UNEXPECTED-FAIL | dom/filesystem/tests/test_basic.html | Just Files or Directories - Result logged after SimpleTest.finish()
https://hg.mozilla.org/mozilla-central/rev/00fcb0aaf4e0
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.