Bug 1258137 - OSFileSystem should not be kept alive by more than 1 Directory, r=smaug