dom/filesystem/DeviceStorageFileSystem.h
@@ -27,6 +27,9 @@ public:
 
   // Overrides FileSystemBase
 
+  virtual already_AddRefed<FileSystemBase>
+  Clone() override;
+
   virtual void
   Shutdown() override;
 
