dom/filesystem/FileSystemBase.h
@@ -34,6 +34,9 @@ public:
   virtual void
   SerializeDOMPath(nsAString& aOutput) const = 0;
 
+  virtual already_AddRefed<FileSystemBase>
+  Clone() = 0;
+
   virtual nsISupports*
   GetParentObject() const;
 
