dom/filesystem/OSFileSystem.h
@@ -22,6 +22,9 @@ public:
 
   // Overrides FileSystemBase
 
+  virtual already_AddRefed<FileSystemBase>
+  Clone() override;
+
   virtual nsISupports*
   GetParentObject() const override;
 
